--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.2.1",
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
